--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@reduxjs/toolkit": "^2.6.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.482.0",
     "react": "^19.0.0",
-    "react-datepicker": "^8.3.0",
+    "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
