--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_API_URL=https://nayimwd-unitysportsclubapi-production.up.railway.app/api/v1
+VITE_API_URL=https://nayimwd-unitysportsclubapi-production.up.railway.app/api/v1/
