--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
     "@reduxjs/toolkit": "^2.6.1",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tiptap/extension-document": "^2.12.0",
+    "@tiptap/extension-heading": "^2.12.0",
     "@tiptap/extension-link": "^2.12.0",
+    "@tiptap/extension-paragraph": "^2.12.0",
+    "@tiptap/extension-strike": "^2.12.0",
+    "@tiptap/extension-text": "^2.12.0",
     "@tiptap/extension-text-align": "^2.12.0",
     "@tiptap/extension-underline": "^2.12.0",
     "@tiptap/react": "^2.12.0",
