--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/typography": "^0.5.16",
     "@tiptap/extension-heading": "^2.12.0",
