feat: created dashboard summary with apiSlice and types

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,69 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+
+.light {
+  /* Base Colors */
+  --bg: #f6f7fb;
+  --surface: #ffffff;
+  --subSurface: #dfe3ec;
+  --border: #e2e8f0;
+  --inputBorder: #d1d5db;
+
+  /* Text Colors */
+  --font: #1e293b;
+  --subtext: #4b5563;
+  --muted: #9ca3af;
+
+  /* Accent Colors */
+  --primary: #007bff;
+  --primaryHover: #005bbb;
+  --secondary: #ffb300;
+  --disabledText: #9ca3af;
+
+  /* Toast Notifications */
+  --toastSuccessBg: #e8f5e9;
+  --toastSuccessText: #2e7d32;
+  --toastErrorBg: #ffebee;
+  --toastErrorText: #c62828;
+
+  /* Gradients */
+  --gradient-primary: linear-gradient(90deg, #007bff, #004c99);
+  --gradient-secondary: linear-gradient(120deg, #f1f5f9, #dce4ec);
+  --gradient-bg: linear-gradient(180deg, #f8fafc, #dde7f0);
+  --gradientN-bg: linear-gradient(90deg, #f8fafc, #dde7f0);
+}
+
+/* Dark Mode */
+.dark {
+  /* Base Colors */
+  --bg: #0a192f;
+  --surface: #1b263b;
+  --subSurface: #2c3e50;
+  --border: #3a4a5e;
+  --inputBorder: #4a5d72;
+
+  /* Text Colors */
+  --font: #c7d1e0;
+  --subtext: #a0a8b6;
+  --muted: #6c7a89;
+
+  /* Accent Colors */
+  --primary: #1e88e5;
+  --primaryHover: #165a9e;
+  --secondary: #ff9100;
+  --disabledText: #778899;
+
+  /* Toast Notifications */
+  --toastSuccessBg: #0d3b20;
+  --toastSuccessText: #43a047;
+  --toastErrorBg: #4e0d0d;
+  --toastErrorText: #e53935;
+
+  /* Gradients */
+  --gradient-primary: linear-gradient(90deg, #1976d2, #0d47a1);
+  --gradient-secondary: linear-gradient(120deg, #2c3e50, #1e2a38);
+  --gradient-bg: linear-gradient(180deg, #0a192f, #1b263b);
+  --gradientN-bg: linear-gradient(90deg, #0a192f, #1b263b);
+}
